# fourinarow

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bfs_node.h  bfs_node_ut.cpp  fourbynine.i  fourbynine_features.h  game_tree.h  game_tree_node.h  game_tree_ut.cpp  ninarow_bfs.h  ninarow_bfs_ut.cpp  ninarow_board.h  ninarow_board_ut.cpp  ninarow_heuristic.h  ninarow_heuristic_feature.h  ninarow_heuristic_feature_ut.cpp  ninarow_heuristic_ut.cpp  ninarow_move.h  ninarow_move_ut.cpp  ninarow_pattern.h  ninarow_pattern_ut.cpp  ninarow_vectorized_feature_evaluator.h  ninarow_vectorized_feature_evaluator_ut.cpp  player.h  searches.h
docs/: bfs__node_8h_source.html  classBFSNode-members.html  classBFSNode.html  classNInARow_1_1Board.html  classNInARow_1_1Heuristic.html  classNInARow_1_1Move-members.html  classNInARow_1_1Pattern-members.html  classNInARow_1_1VectorizedFeatureEvaluator.html  classNode-members.html  classSearch.html  classes.html  classmodel__fitting_1_1board__explorer_1_1BoardDisplay-members.html  classmodel__fitting_1_1board__explorer_1_1FeatureList-members.html  classmodel__fitting_1_1board__explorer_1_1FeatureListItem-members.html  classmodel__fitting_1_1board__explorer_1_1FeatureListItem.html  classmodel__fitting_1_1board__explorer_1_1LoadPositionsWidget-members.html  classmodel__fitting_1_1board__explorer_1_1LoadPositionsWidget.html  classmodel__fitting_1_1board__explorer_1_1MainWindow-members.html  classmodel__fitting_1_1board__explorer_1_1MoveHistory.html  classmodel__fitting_1_1board__explorer_1_1MoveHistoryListItem-members.html  classmodel__fitting_1_1board__explorer_1_1MoveHistoryListItem.html  classmodel__fitting_1_1board__explorer_1_1MoveList-members.html  classmodel__fitting_1_1board__explorer_1_1MoveList.html  classmodel__fitting_1_1board__explorer_1_1MoveListItem-members.html  classmodel__fitting_1_1examples_1_1ModifiedBestFirstSearch.html  classmodel__fitting_1_1model__fit_1_1DefaultModel-members.html  classmodel__fitting_1_1model__fit_1_1ModelFitter.html  classmodel__fitting_1_1model__fit_1_1SuccessFrequencyTracker-members.html  classmodel__fitting_1_1ninarow__plotting_1_1BoardRenderer.html  files.html  functions_c.html  (+29 more)
(+228 files in other folders)
